tests/dataset/tpc-ds/compiler/c/q52.error
/tmp/TestCCompiler_TPCDS_Goldenq522171647308/001/prog.c: In function ‘test_TPCDS_Q52_simplified’:
/tmp/TestCCompiler_TPCDS_Goldenq522171647308/001/prog.c:226:7: error: incompatible types when initializing type ‘int’ using type ‘tmp_item_t’
  226 |       (tmp_item_t){.d_year = 2001, .brand_id = 2, .ext_price = 22.0}};
      |       ^
/tmp/TestCCompiler_TPCDS_Goldenq522171647308/001/prog.c:229:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  229 |   if (test_TPCDS_Q52_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq522171647308/001/prog.c:233:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  233 |       if (test_TPCDS_Q52_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq522171647308/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq522171647308/001/prog.c:261:31: warning: implicit declaration of function ‘filtered_item_list_t_create’ [-Wimplicit-function-declaration]
  261 |   filtered_item_list_t tmp4 = filtered_item_list_t_create(filtered.len);
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq522171647308/001/prog.c:261:31: error: invalid initializer
/tmp/TestCCompiler_TPCDS_Goldenq522171647308/001/prog.c:271:18: error: incompatible types when assigning to type ‘int’ from type ‘list_int’
  271 |     tmp7[tmp5] = result;
      |                  ^~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq522171647308/001/prog.c:308:38: error: incompatible types when assigning to type ‘list_int’ from type ‘filtered_item_list_t’
  308 |   test_TPCDS_Q52_simplified_result = result;
      |                                      ^~~~~~
